# rte-rrtmgp-cpp

./: .gitignore  CMakeLists.txt  consegna.ipynb  run_all.sh
allsky/: compile_run_test.sh  mine.txt  mine_opt.txt  mine_opt_comp.txt  original_differences.csv  performance_results.txt  performance_results_no_boost.txt  reference.txt  reference_comp.txt  run_and_compare.py
include/: Array.h  rrtmgp_kernel_launcher_cuda.h  tools_gpu.h
src_cuda/: Gas_optics_rrtmgp.cu
src_kernels_cuda/: CMakeLists.txt  gas_optical_depths_minor_cpu.cpp  gas_optics_kernel_launchers.cu  gas_optics_kernels.cu
src_test/: CMakeLists.txt  test_rte_rrtmgp.cu
